--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">Simple Calculator<br />
+										<h2><a href="https://github.com/kristinkx/Python_Projects/blob/main/Simple_Calculator.py">Simple Calculator<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/math.png" alt="" /></a>
+									<a href="https://github.com/kristinkx/Python_Projects/blob/main/Simple_Calculator.py" class="image fit"><img src="images/math.png" alt="" /></a>
 									<p>Python project calculates the basic arithmetic operations and log, exponent and modular functions</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://github.com/kristinkx/Python_Projects/blob/main/Simple_Calculator.py" class="button">View Project</a></li>
 									</ul>
 								</article>
 								
