--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</article>
 
 						 <!-- Posts -->
-                            <section class="posts">
+                                                       <section class="posts">
 								<article>
 									<header>
 										<h2><a href="https://github.com/kristinkx/Python_Projects/blob/main/Boston_Housing.ipynb">Boston Housing Analysis<br />
@@ -79,7 +79,7 @@
 										<h2><a href="https://public.tableau.com/app/profile/kristin2389">Tableau Projects<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/kristin2389" class="image fit"><img src="images/tableau.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/kristin2389" class="image fit"><img src="images/Tableau.png" alt="" /></a>
 									<p>Tableau side projects to practice data visualization </p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/kristin2389" class="button">View Project</a></li>
